--- a/style.css
+++ b/style.css
@@ -110,16 +110,14 @@ body {
     margin: .3rem 0;
 }
 
+a {
+    text-decoration: none; 
+    color: hsl(219, 12%, 42%);
+}
+
 img{
     width: 50px;
     height: auto;
-}
-.rad {
-    border-radius: 100px;
-}
-
-.height {
-    height: 45px;
 }
 
 .inline__img {
@@ -152,7 +150,6 @@ img{
     font-weight: 800;
     color: #000;
 }
-
 
 .bold:hover, .post:hover,
 .group:hover, .group {
