--- a/style.css
+++ b/style.css
@@ -117,6 +117,10 @@ a {
     text-decoration: none;
 }
 
+.attribution a {
+    text-decoration: underline;
+}
+
 img {
     width: 30px;
     height: auto;
@@ -161,6 +165,6 @@ img {
     font-weight: 600;
 }
 
-.post {
+.post, .notif__msg--text p {
     color: hsl(219, 12%, 42%);   
 }
